app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adfo
  labels:
    app: adfo
spec:
  replicas: 3
  strategy:
      type: RollingUpdate
  selector:
    matchLabels:
      app: adfo
  template:
    metadata:
      labels:
        app: adfo
    spec:
      containers:
      - name: adfo
        #image: ptsre-adfo-app:v0.1.0
        image: lucinda.dilworth.uk:8080/ptsre-adfo-app
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health/
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /                # The path to check for the readiness probe
            port: 8080               # The port to check on
          initialDelaySeconds: 5   # Wait this many seconds before starting the probe
          periodSeconds: 5         # Check the probe every 5 seconds
