app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adfo
  labels:
    run: adfo
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: adfo
